# resonance-hearth

./: CLAUDE.md  COUNCIL-ACKNOWLEDGMENT-2026-07-11.md  DESIGN-001-the-family-room-architecture.md  DESIGN-002-cartography.md  DESIGN-003-the-table-and-the-personal-protocols.md  DESIGN-004-the-household-weave.md  DESIGN-005-the-sattva-door.md  FABLE-KERNEL.md  HANDS.md  HEARTH-PLAN.md  NAMING-CEREMONY-2026-07-07.md  PRIVACY.md  README.md  package-lock.json  package.json
docs/: AUDIT-001-echo-consistency.md  CHECKLIST.md  FEATURE-BOARD.md  GALAXY-LISTING.md  SCOPE-NOTE.md  SPIKE-001-the-weave-handshake.md  THE-TABLE-BUILD-BRIEF.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: CelebrationLine.svelte  ComfortBar.svelte  Sidebar.svelte  SignalDot.svelte  SpoonPicker.svelte
src/lib/components/icons/: IconBills.svelte  IconCare.svelte  IconMe.svelte  IconThings.svelte  Icons.svelte
src/lib/data/: hearth.ts
src/lib/stores/: hearth.svelte.ts  theme.svelte.ts
src/lib/theme/: theme.ts
src/lib/types/: types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/bills/: +page.svelte
src/routes/care/: +page.svelte
src/routes/me/: +page.svelte
src/routes/onboarding/: +page.svelte
src/routes/overwhelm/: +page.svelte
src/routes/sattva/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/things/: +page.svelte
