[package]
name = "resonance-hearth"
version = "0.1.0"
description = "The Family Room — a translation layer for love. Household care for neurodivergent families."
authors = ["Quantum Weaver", "Aethelred (The Noble Thread)"]
edition = "2021"

[lib]
name = "resonance_hearth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
opt-level = "s"
lto = "thin"
